# motor-name-pending

./: .clang-format  .gitignore  CMakeLists.txt  package.xml
config/: example_setup.yaml
doc/: WRevolution_SoftwareDesign.drawio  architecture.plantuml  make-documentation.sh
launch/: ros_control_test.launch
src/: CMakeLists.txt  communicationHandler.h  controlGroup.cpp  controlGroup.h  group.cpp  group.h  motor.cpp  motor.h  motorRos.cpp  motorRos.h  test.cpp
src/app/: CMakeLists.txt  test.cpp
src/app/CalibrateMagnetometer/: CMakeLists.txt  main.cpp
src/app/MockMotors/: CMakeLists.txt  main.cpp
src/app/Pigeon2/: CMakeLists.txt  main.cpp
src/app/RawTalonTest/: CMakeLists.txt  test.cpp
src/app/RosControlTest/: CMakeLists.txt  groupMotors.cpp  main.cpp  test_sinusoidal_power.py
src/app/RosPhoenix/: CMakeLists.txt  main.cpp  test_sinusoidal_power.py
src/config-parsing/: CMakeLists.txt
src/config-parsing/include/: RosHandlerFactory.h
src/config-parsing/src/: RosHandlerFactory.cpp
src/hardware/: CMakeLists.txt
src/hardware/include/: ControlGroup.h  Group.h  MockMotor.h  Motor.h  PigeonIMU.h
src/hardware/src/: Group.cpp  MockMotor.cpp  Motor.cpp  PigeonIMU.cpp
src/ros-handler/: CMakeLists.txt
src/ros-handler/include/: ControlGroupRosHandler.h  EncoderTimedAction.h  HeadingTimedAction.h  PigeonRosHandler.h  PowerSubscribedAction.h  ResetEncoderServiceAction.h  ResetSettingsServiceAction.h  ReverseServiceAction.h  SetHeadingServiceAction.h  TimedRosAction.h  WatchdogTimedSubscribedAction.h  ZeroPowerBehaviorServiceAction.h
src/ros-handler/include/ros-handler-core/: ControlGroupRosServiceAction.h  ControlGroupRosSubscribedAction.h  ControlGroupRosSubscribedAnction.h  ControlGroupRosTimedAction.h  PigeonRosServiceAction.h  PigeonRosTimedAction.h  RosConcepts.h  RosServiceAction.h  RosSubscribedAction.h  RosTimedAction.h
src/ros-handler/src/: .HeadingTimedAction.cpp.swp  ControlGroupRosHandler.cpp  EncoderTimedAction.cpp  HeadingTimedAction.cpp  PigeonRosHandler.cpp  PowerSubscribedAction.cpp  ResetEncoderServiceAction.cpp  ResetSettingsServiceAction.cpp  ReverseServiceAction.cpp  SetHeadingServiceAction.cpp  TimedRosAction.cpp  WatchdogTimedSubscribedAction.cpp  ZeroPowerBehaviorServiceAction.cpp
src/ros-handler/src/ros-handler-core/: ControlGroupRosTimedAction.cpp  PigeonRosTimedAction.cpp  RosTimedAction.cpp
srv/: ResetSettings.srv  Reverse.srv  SetHeading.srv  ZeroPowerBehavior.srv  resetSettings.srv  zeroPowerBehavior.srv
